--- a/src/main/resources/front/pages/keeper/product/增加商品.html
+++ b/src/main/resources/front/pages/keeper/product/增加商品.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: 'Noto Serif SC', serif;
-            background-color: #F5DEB3; /* 茶色背景 */
+            background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; /*蓝色背景*/
             color: #333;
             margin: 0;
             padding: 0;
@@ -21,7 +21,7 @@
          }
 
         .Box h3 {
-            color: #5D4037;
+           color: #6495ED; /* 柔和的蓝色 */;
             text-align: center;
             margin-bottom: 15px;
         }
@@ -43,7 +43,7 @@
         }
 
         .Box input[type="submit"] {
-            background-color: #8B4513; /* 赭石色背景 */
+            background- color: #87CEEB;  /* 赭石色背景 */
             color: #fff;
             cursor: pointer;
             border: none;
@@ -53,7 +53,7 @@
         }
 
         .Box input[type="submit"]:hover {
-            background-color: #A0522D; /* 悬停时颜色略深 */
+            background-color: #265dc5; /* 悬停时颜色略深 */
         }
 
 
@@ -62,7 +62,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@0.2.3/dist/bubbly-bg.js"></script>
 <body>
 <body>
-<div class="Box" style="background:#d7be8b;">
+<div class="Box" style="background:#6dcdd5;">
     <form action="/product/login">
         <h3>添加商品</h3>
         <p class="desc">WELCOME TO ADD PRODUCT</p>
