--- a/src/main/resources/front/pages/keeper/user/所有用户列表.html
+++ b/src/main/resources/front/pages/keeper/user/所有用户列表.html
@@ -5,14 +5,14 @@
   <style>
     body {
       font-family: 'Noto Serif SC', serif;
-      background-color: #F5DEB3; /* 茶色背景 */
+      background: linear-gradient(to bottom, #bcd7e1, #b8c8d7, #c2d0dc); ; /*蓝色背景*/
       color: #333;
       margin: 0;
       padding: 0;
     }
     h1 {
       text-align: center;
-      color: #5D4037; /* 深茶色标题 */
+     color: #6495ED; /* 柔和的蓝色 */; /* 深茶色标题 */
       margin-bottom: 20px;
     }
     .userList {
@@ -23,7 +23,7 @@
       justify-content: center;
     }
     .user {
-      background-color: #d7be8b;
+      background-color: #7584dc;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       border-radius: 4px;
       padding: 20px;
@@ -36,7 +36,7 @@
 </head>
 <body>
 <h1>所有用户信息</h1>
-<div class="userList" id="userList" style="background:#d7be8b;">
+<div class="userList" id="userList" style="background:#6d95dc;">
 </div>
 <script>
   function fetchUsers() {
