--- a/src/main/resources/front/pages/user/cart/空购物车.html
+++ b/src/main/resources/front/pages/user/cart/空购物车.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5deb3;
+      background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ;
       text-align: center;
       padding-top: 100px;
     }
@@ -22,7 +22,7 @@
     .cta-button {
       display: inline-block;
       padding: 10px 20px;
-      background-color: #d7be8b;
+      background-color: #486de8;
       color: white;
       border: none;
       cursor: pointer;
@@ -31,7 +31,7 @@
       margin-top: 30px;
     }
     .cta-button:hover {
-      background-color: #dcb567;
+      background-color: #4496ef;
     }
   </style>
 </head>
