--- a/src/main/resources/front/pages/user/keeper/店家信息.html
+++ b/src/main/resources/front/pages/user/keeper/店家信息.html
@@ -6,12 +6,12 @@
   <title>店家信息展示与修改</title>
   <style>
     body {
-      background-color: #f5deb3; /* 浅米色背景 */
+      background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; /* 浅米色背景 */
       font-family: Arial, sans-serif;
       text-align: center;
     }
     .profile-card {
-      background-color: #d7be8b;
+      background-color: #5b66e5;
       border: 1px solid #ddd;
       border-radius: 5px;
       padding: 20px;
