--- a/src/main/resources/front/pages/user/order/支付后的订单查看.html
+++ b/src/main/resources/front/pages/user/order/支付后的订单查看.html
@@ -6,7 +6,7 @@
     <title>订单展示</title>
     <style>
         body {
-            background-color: #f5deb3;
+            background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ;
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -28,7 +28,7 @@
         }
         .product-item{
             /*边框设置*/
-            border: 1px solid #ccc;
+            b: 1px solid #ccc;
             /*设置每个模块间的距离*/
             margin-top: 10px;
         }
