--- a/src/main/resources/front/pages/user/payment/支付成功页面.html
+++ b/src/main/resources/front/pages/user/payment/支付成功页面.html
@@ -7,7 +7,7 @@
   <title>支付成功页面</title>
   <style>
     body {
-      background-color: #f5deb3;
+      background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ;
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
@@ -44,18 +44,18 @@
       transition: background-color 0.3s ease;
     }
     .button-home {
-      background-color: #d7be8b;
+      background-color: #5773e5;
       color: white;
     }
     .button-home:hover {
-      background-color: #dcb15e;
+      background-color: #41a0ee;
     }
     .button-order {
-      background-color: #d7be8b;
+      background-color: #4f81fd;
       color: white;
     }
     .button-order:hover {
-      background-color: #dcb15e;
+      background-color: #507ae1;
     }
   </style>
 </head>
