--- a/src/main/resources/front/pages/user/user/我的.html
+++ b/src/main/resources/front/pages/user/user/我的.html
@@ -5,7 +5,7 @@
   <title>我的</title>
   <style>
     body{
-      background-color: #f5deb3; /* 浅米色背景 */
+      background: linear-gradient(to bottom, #00BFFF, #a4c5e8, #87b3e7); ; /* 浅米色背景 */
       font-family: Arial, sans-serif;
       text-align: center;
     }
@@ -16,8 +16,8 @@
       padding: 20px;
     }
     .module {
-      background-color: #d7be8b;
-      border: 1px solid #ccc;
+      background-color: #87beeb;
+      border: 1px solid #4f72e8;
       border-radius: 5px;
       margin-bottom: 10px;
       padding: 15px;
@@ -26,7 +26,7 @@
       cursor: pointer;
     }
     .module:hover {
-      background-color: #e5bf69;
+      background-color: #3968e0;
     }
   </style>
 </head>
