--- a/src/main/resources/front/pages/keeper/keeper/查询&修改店家信息.html
+++ b/src/main/resources/front/pages/keeper/keeper/查询&修改店家信息.html
@@ -6,12 +6,12 @@
   <title>店家信息展示与修改</title>
   <style>
       body {
-          background-color: #f5deb3; /* 浅米色背景 */
+          background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; /* 浅米色背景 */
           font-family: Arial, sans-serif;
           text-align: center;
       }
       .profile-card {
-          background-color: #d7be8b;
+          background-color: #3d8ad3;
           border: 1px solid #ddd;
           border-radius: 5px;
           padding: 20px;
@@ -48,6 +48,9 @@
         <label for="email">电子邮箱:</label>
         <input type="email" id="email" name="email" required><br>
 
+<!--        <label for="status">商店状态:</label>-->
+<!--        <input type="text" id="status" name="status" required><br>-->
+
         <button type="submit">提交</button>
 
     </form>
@@ -61,11 +64,12 @@
         password: $("#password").val(),
         tel: $("#tel").val(),
         email: $("#email").val()
+
       };
 
       console.log("提交信息:"+formData)
       $.ajax({
-        url: "/keeper/keeper/update",
+        url: 'http://localhost:8080/keeper/keeper/update',
         type: "PUT",
         contentType: "application/json",
         data: JSON.stringify(formData),
@@ -104,7 +108,7 @@
     // const div=document.createElement("div")
     const keeperInfo = document.getElementById('KeeperInfo');
     keeperInfo.innerHTML = `
-        <img src="https://i.hd-r.cn/72f123918d469f345a620df745270921.jpg" alt="店家头像" class="profile-pic">
+        <img src="https://www.helloimg.com/i/2024/12/18/6762d93b4292d.jpg" alt="店家头像" class="profile-pic">
         <p><strong>店名:</strong>${keeper.keeper_name}</p>
         <p><strong>密码:</strong>${keeper.password}</p>
         <p><strong>电话:</strong> ${keeper.tel}</p>
