--- a/src/main/resources/front/pages/keeper/order/已处理订单.html
+++ b/src/main/resources/front/pages/keeper/order/已处理订单.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5deb3;
+            background: linear-gradient(to bottom, #cfdfe7, #acbcce, #b6ccde); ;
             color: #333;
         }
         table {
@@ -22,13 +22,13 @@
             text-align: left;
         }
         th {
-            background-color: #d7be8b; /* 赭石色背景 */
+            background-color: #3175dc; /* 赭石色背景 */
             color: white;
             font-weight: bold;
             text-transform: uppercase;
         }
         /*tr:nth-child(even) {*/
-        /*    background-color: #F5DEB3; !* 浅茶色 *!*/
+        /*    background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; !* 浅茶色 *!*/
         /*}*/
         .order-status {
             text-align: center;
@@ -44,6 +44,7 @@
         <th>创建时间</th>
         <th>结束时间</th>
         <th>目的地</th>
+        <th>是否收货</th>
         <th>订单状态</th>
     </tr>
     </thead>
@@ -78,6 +79,7 @@
           <td>${order.createTime}</td>
           <td>${order.endTime}</td>
           <td>${order.destination}</td>
+          <td>${order.receive_status}</td>
           <td class="order-status">${order.status}</td>
         `;
             ordersList.appendChild(row);
