--- a/src/main/resources/front/pages/user/cart/查询购物车.html
+++ b/src/main/resources/front/pages/user/cart/查询购物车.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人信息展示与修改</title>
     <style>        body {
-        background-color: #F5DEB3; /* 更改为柔和的米黄色背景 */
+        background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; /* 更改为柔和的米黄色背景 */
         font-family: Arial, sans-serif;
         text-align: center;
     }
@@ -13,7 +13,7 @@
         color: #6D4C41; /* 标题采用深茶色 */
     }
     .cartVo-card {
-        background-color: #f5deb3; /* 轻茶色背景 */
+        background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ; /* 轻茶色背景 */
         border: 1px solid #D6B694; /* 棕褐色边框 */
         border-radius: 5px;
         padding: 20px;
@@ -66,6 +66,7 @@
             }
             // const cartVoProfile = await response.json();
             const cartVoProfile = await response.json();
+            // console.log("打印测试cartVoProfile222222222222|||",cartVoProfile)
             // console.log("后端接收：cartVo对象："+cartVoProfile)
             displayCartVoProfile(cartVoProfile);
         } catch (error) {
@@ -162,9 +163,67 @@
         };
         xhr.send();
 
-        window.location.href = `../payment/支付成功页面.html`;
+         createReceivingNote();
+        // var xhr1 = new XMLHttpRequest();
+        // xhr1.open('GET', `http://localhost:8080/user/order/getNewOrderId/${userId}`, true);
+        //
+        // xhr1.onreadystatechange = function () {
+        //     if (xhr1.readyState === 4 && xhr1.status === 200) {
+        //         // 获取到的最新订单 ID
+        //         var orderId = xhr1.responseText;  // 这里应该是订单 ID，假设返回的是整数类型
+        //
+        //         // 打印调试信息
+        //         console.log("获取到的最新 orderId:", orderId);
+        //
+        //         // 获取到 orderId 后，继续调用 createReceivingNote 接口
+        //         var xhr2 = new XMLHttpRequest();
+        //         xhr2.open('GET', `http://localhost:8080/user/payment/createReceivingNote/${userId}/${orderId}`, true);
+        //
+        //         xhr2.setRequestHeader('Content-Type', 'application/json');
+        //         xhr2.onreadystatechange = function () {
+        //             if (xhr2.readyState === 4 && xhr2.status === 200) {
+        //                 console.log(xhr2.responseText);  // 打印返回的响应
+        //             }
+        //         };
+        //         xhr2.send();
+        //     }
+        // };
+        // xhr1.send();
+        //
+        // window.location.href = `../payment/支付成功页面.html`;
         // 支付完成后即可删除购物车
 
+    }
+
+    function createReceivingNote(){
+        // var xhr1 = new XMLHttpRequest();
+        // xhr1.open('GET', `http://localhost:8080/user/order/getNewOrderId/${userId}`, true);
+
+        // xhr1.onreadystatechange = function () {
+        //     if (xhr1.readyState === 4 && xhr1.status === 200) {
+                // 获取到的最新订单 ID
+                // var orderId = xhr1.responseText;  // 这里应该是订单 ID，假设返回的是整数类型
+                //
+                // // 打印调试信息
+                // console.log("获取到的最新 orderId:", orderId);
+
+                // 获取到 orderId 后，继续调用 createReceivingNote 接口
+                var xhr2 = new XMLHttpRequest();
+                xhr2.open('GET', `http://localhost:8080/user/payment/createReceivingNote/${userId}`, true);
+
+                xhr2.setRequestHeader('Content-Type', 'application/json');
+                xhr2.onreadystatechange = function () {
+                    if (xhr2.readyState === 4 && xhr2.status === 200) {
+                        console.log(xhr2.responseText);  // 打印返回的响应
+                    }
+                };
+                xhr2.send();
+            // }
+
+        // xhr1.send();
+
+        window.location.href = `../payment/支付成功页面.html`;
+        // 支付完成后即可删除购物车
     }
 
 
