--- a/src/main/resources/front/pages/user/product/首页展示.html
+++ b/src/main/resources/front/pages/user/product/首页展示.html
@@ -5,7 +5,7 @@
   <style>
     body {
     font-family: 'Noto Serif SC', serif;
-    background-color: #F5DEB3; /* 茶色背景 */
+    background: linear-gradient(to bottom, #74bfd7, #87beeb, #87beeb); ; /*蓝色背景*/
     color: #333;
   }
     #searchForm {
@@ -30,13 +30,13 @@
     }
 
     #searchInput::placeholder {
-      color: #999;
+      color: rgba(153, 153, 153, 0.99);
     }
 
     button {
       padding: 14px 20px;
       border: none;
-      background-color: #664A2E; /* 茶色按钮 */
+      background-color: #2e3e66; /* 茶色按钮 */
       color: #fff;
       font-size: 16px;
       cursor: pointer;
@@ -45,25 +45,25 @@
     }
 
     button:hover {
-      background-color: #523B25; /* 鼠标悬停时更深的茶色 */
+      background-color: #252952; /* 鼠标悬停时更深的茶色 */
     }
 
 
   h1 {
     text-align: center;
-    color: #5D4037; /* 深茶色标题 */
+   color: #6495ED; /* 柔和的蓝色 */; /* 深茶色标题 */
     margin-bottom: 20px;
   }
   /* 调整超链接样式 */
   a {
     float:right;
-    color: #8B4513; /* 赭石色作为链接的基本颜色 */
+     color: #87CEEB;  /* 赭石色作为链接的基本颜色 */
     text-decoration: none;
     transition: color 0.3s ease; /* 平滑过渡效果 */
     margin-right: 10px;
   }
   a:hover {
-    color: #A0522D; /* 悬停时颜色略深，以增加交互感 */
+    color: #3c2da0; /* 悬停时颜色略深，以增加交互感 */
     text-decoration: underline;
   }
   .product img {
@@ -82,7 +82,7 @@
     /*圆角*/
     border-radius: 15px;
     width: 1450px;
-    background-color: #d7be8b;
+    background-color: #4485dc;
     display: flex;
     align-items: flex-start;
     margin-bottom: 20px;
@@ -96,7 +96,7 @@
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #d7be8b; /* 蓝色背景 */
+    background-color: #4280dc; /* 蓝色背景 */
     border: none;
     border-radius: 4px; /* 圆角 */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12); /* 阴影 */
@@ -105,7 +105,7 @@
   </style>
 </head>
 <body>
-<h1>小仲购物</h1>
+<h1>商城</h1>
 <a href="../user/我的.html">我的</a>
 <a href="../keeper/店家信息.html">店家</a>
 &nbsp;&nbsp;
@@ -161,7 +161,7 @@
       const keeperStatus = await response.json();
       localStorage.setItem('keeperStatus', keeperStatus)
       console.log("店铺状态："+keeperStatus)
-      var button = document.querySelector('button[onclick="setKeeperStatus()"]');
+      const button = document.getElementById('open_close');
       button.textContent = keeperStatus === 1 ? "店铺营业中" : "店铺已打烊";
 
     } catch (error) {
