--- a/src/main/resources/front/pages/user/search/搜索结果.html
+++ b/src/main/resources/front/pages/user/search/搜索结果.html
@@ -7,7 +7,7 @@
 </head>
 <style>        body {
     font-family: Arial, sans-serif;
-    background-color: #F5DEB3;
+    background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ;
 }
 
 #searchResults {
