--- a/src/main/resources/front/pages/店家登录.html
+++ b/src/main/resources/front/pages/店家登录.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <style>    body {
-        background-color: #F5DEB3;
+        background: linear-gradient(to bottom, #00BFFF, #1E90FF, #4682B4); ;
         font-family: 'Noto Serif SC', serif;
         background-size: cover;
         display: flex;
@@ -16,7 +16,7 @@
     }
     .Box {
 
-        background-color: rgba(215, 189, 139, 0.99); /* 茶色背景 */
+         background-color: rgba(135, 206, 235, 0.99); /*蓝色背景*/
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         padding: 20px;
@@ -25,7 +25,7 @@
     }
     h3 {
         text-align: center;
-        color: #5D4037; /* 深茶色文字 */
+       color: #6495ED; /* 柔和的蓝色 */; /* 深茶色文字 */
         margin-bottom: 15px;
     }
     .desc {
@@ -42,27 +42,27 @@
         margin-bottom: 15px;
         border: 1px solid #ccc;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: #87a0eb;
     }
     .loginBtn {
         width: 60%;
         padding: 10px;
-        background-color: #8B4513; /* 赭石色按钮 */
+        background- color: #87CEEB;  /* 赭石色按钮 */
         border: none;
-        color: white;
+        color: #507ae1;
         cursor: pointer;
         border-radius: 5px;
         font-weight: bold;
     }
     .loginBtn:hover {
-        background-color: #A0522D; /* 更深的赭石色 */
+        background-color: #7c92c7; /* 更深的赭石色 */
     }
     .no {
         text-align: center;
         margin-top: 20px;
     }
     .no a {
-        color: #8B4513; /* 赭石色链接 */
+         color: #87CEEB;  /* 赭石色链接 */
         text-decoration: none;
     }
     .no a:hover {
@@ -73,7 +73,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@0.2.3/dist/bubbly-bg.js"></script>
 <body>
 <body> <div class="Box">
-    <form action="/keeper/login">
+    <form>
     <h3>登录</h3>
     <p class="desc">WELCOME LOGIN</p>
     <input type="text" placeholder="请输入用户名" required>
@@ -103,6 +103,7 @@
             xhr.open('POST', '/keeper/keeper/login', true);
             xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
 
+            xhr.send(JSON.stringify(keeper));
             xhr.onload = function () {
                 console.log(typeof xhr.responseText)
                 if (xhr.responseText !== "0") {
@@ -119,7 +120,7 @@
                 console.error('网络错误，请稍后再试');
                 alert('网络错误，请稍后再试');
             };
-            xhr.send(JSON.stringify(keeper));
+
         });
     });
 </script>
